--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
     <title>Lecture 11</title>
   </head>
   <body>
-    <div class="box"></div>
+    <div class="row">
+      <div>პირველი</div>
+      <div>მეორე</div>
+      <div>მესამე</div>
+    </div>
+
+    <!-- <h1>სათაურის მაგალითი</h1>
+    <p>
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat, sed,
+      quidem porro ipsum pariatur blanditiis ab et veritatis repellendus, in
+      delectus aperiam reprehenderit itaque nisi voluptates rem sunt animi ad.
+    </p>
+
+    <div>დივის ტექსტი</div> -->
   </body>
 </html>
